--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -1,7 +1,10 @@
 #定义l一个变量SRC_LIST，包含了当前目录下所有的源文件
 aux_source_directory(. SRC_LIST)
+aux_source_directory(./db DB_LIST)
+aux_source_directory(./model MODEL_LIST)
+aux_source_directory(./redis REDIS_LIST)
 
 # 指定生成可执行文件
-add_executable(ChatServer ${SRC_LIST})
+add_executable(ChatServer ${SRC_LIST} ${DB_LIST} ${MODEL_LIST} ${REDIS_LIST})
 # 指定可执行文件链接时需要的库文件
-target_link_libraries(ChatServer muduo_net muduo_base pthread)
+target_link_libraries(ChatServer muduo_net muduo_base mysqlclient  pthread)
