--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -7,4 +7,4 @@ aux_source_directory(./redis REDIS_LIST)
 # 指定生成可执行文件
 add_executable(ChatServer ${SRC_LIST} ${DB_LIST} ${MODEL_LIST} ${REDIS_LIST})
 # 指定可执行文件链接时需要的库文件
-target_link_libraries(ChatServer muduo_net muduo_base mysqlclient  pthread)
+target_link_libraries(ChatServer muduo_net muduo_base mysqlclient hiredis pthread)
