--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
   "files.associations": {
     "*.asm": "assembly",
     "iostream": "cpp",
-    "thread": "cpp"
+    "thread": "cpp",
+    "random": "cpp",
+    "ostream": "cpp"
   }
 }
